--- a/dust/user/index.html
+++ b/dust/user/index.html
@@ -40,9 +40,9 @@
         <div class="content__window">
             <div id="content__scroll" class="content__scroll">
                 <div class="user-page-title user-page-title_top">
-                    <h1 class="user-page-title__name">Ошибка</h1>
-                    <h1 class="user-page-title__online">Ошибка</h1>
-                    <h1 class="user-page-title__status">Ошибка</h1>
+                    <h1 class="user-page-title__name">  </h1>
+                    <h1 class="user-page-title__online">   </h1>
+                    <h1 class="user-page-title__status">   </h1>
                 </div>
 
                 <div class="top-user-data-container">
@@ -53,21 +53,21 @@
                     </div>
                     <div class="top-user-data-container__text">
                         <div class="user-page-title user-page-title_right">
-                            <h1 class="user-page-title__name">Ошибка</h1>
-                            <h1 class="user-page-title__online">Ошибка</h1>
-                            <h1 class="user-page-title__status">Ошибка</h1>
+                            <h1 class="user-page-title__name">   </h1>
+                            <h1 class="user-page-title__online">   </h1>
+                            <h1 class="user-page-title__status">    </h1>
                         </div>
 
                         <div class="user-page-state user-page-state_right">
-                            <h1 class="user-page-title__work">Ошибка</h1>
-                            <h1 class="user-page-title__city">Ошибка</h1>
+                            <h1 class="user-page-title__work">    </h1>
+                            <h1 class="user-page-title__city">      </h1>
                         </div>
                     </div>
                 </div>
 
                 <div class="user-page-state user-page-state_bottom">
-                    <h1 class="user-page-title__work">Ошибка</h1>
-                    <h1 class="user-page-title__city">Ошибка</h1>
+                    <h1 class="user-page-title__work">    </h1>
+                    <h1 class="user-page-title__city">    </h1>
                 </div>
 
                 <div class="user-page-content">
